# smtc

./: .gitignore  README.md  manage.py  pyproject.toml
_README/: START.md  TODO  TODO.md
account/: urls.py
account/templates/account/: index.html  login.html  register.html
project/: admin.py  models.py  urls.py  views.py
project/migrations/: 0003_code_created_at.py
project/templates/project/: index.html
realm/: apps.py  forms.py  urls.py  views.py
realm/templates/realm/: login.html  register.html
smtc/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
smtc/static/smtc/css/: base.css
smtc/templates/smtc/: base.html
thecode/: apps.py  models.py  urls.py  views.py
thecode/migrations/: 0001_initial.py  0002_remove_code_type_alter_code_table_and_more.py
